[tool.poetry]
name = "telegram-connection-checker-bot"
version = "0.1.0"
description = "A Telegram bot that checks website connections and provides detailed information"
authors = ["DevSupport <irl77733326@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^20.7"
requests = "^2.31.0"
websocket-client = "^1.7.0"
ipinfo = "^5.1.1"
telegram = "^0.0.1"
websocket = "^0.2.1"
flask = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, W503"
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".venv",
]